# Trusera_ai-bom

./: .ai-bomignore  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BIBLE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.cedar/: ai-policy.cedar
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  detection_pattern.yml  feature_request.md  feature_request.yml
.github/workflows/: ai-bom-example.yml  auto-release.yml  ci.yml  codeql-analysis-injected.yml  docker.yml  docs.yml  dogfood.yml  publish-npm.yml  publish-sdk.yml  publish-vscode.yml  publish.yml
demo-video/: package-lock.json  package.json
demo-video/src/: AIBomDemo.tsx  N8nDemo.tsx  Root.tsx
docs/: api.md  changelog.md  ci-integration.md  cli-reference.md  configuration.md  index.md  installation.md  interceptor-sdks.md  policy.md  quickstart.md  troubleshooting.md
docs/compliance/: eu-ai-act.md  owasp.md
docs/outputs/: index.md
docs/scanners/: index.md
examples/demo-project/: .env.example  app.py
n8n-node/__tests__/: riskScorer.test.ts  scanner.test.ts
scripts/: cedar-gate.py
src/ai_bom/: __init__.py  cache.py  cli.py  config.py  config_file.py  models.py  policy.py  server.py  watcher.py
tests/: conftest.py  test_cache.py  test_cli.py  test_detection_enhanced.py  test_models.py  test_output_schemas.py  test_parallel_scanning.py  test_policy.py  test_risk_scorer.py  test_scan_reliability.py
tests/fixtures/: sample_app.py  sample_crew.py  sample_docker_compose.yml  sample_env  sample_langchain.py  sample_n8n_workflow.json  sample_requirements.txt  sample_terraform.tf
tests/test_callable/: test_factory.py  test_protocol.py
tests/test_dashboard/: test_db.py  (+1 more)
trusera-agent-sdk/: CHANGELOG.md  README.md  STANDALONE.md  pyproject.toml
trusera-sdk-go/: README.md  STANDALONE.md  cedar.go  cedar_test.go  standalone.go  standalone_test.go  trusera.go  trusera_test.go
trusera-sdk-js/: README.md  package.json
(+96 files in other folders)
